--- a/assets/resources/styles/less/layout/_global.less
+++ b/assets/resources/styles/less/layout/_global.less
@@ -745,6 +745,10 @@ template {
   color: #f9063c;
 }
 
+.-color-patra {
+  color: #273d8f;
+}
+
 .-color-dmtca {
 
   color: #15b3da;
@@ -766,6 +770,10 @@ template {
 
 .-color-bl {
   color: #000;
+}
+
+.-color-dharan {
+  color: #b52a6a;
 }
 
 ::-webkit-scrollbar {
