--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -1138,8 +1138,8 @@ section:after {
     display: block;
     position: absolute;
     width: 100%;
-    height: 150px;
-    z-index: 9999
+    height: 80px;
+    z-index: 9999;
 }
 
 .site-header.fullscreen_menu::before {
@@ -1148,7 +1148,7 @@ section:after {
     position: fixed;
     top: 0;
     left: 0;
-    background: #f1f1f1;
+    background: #171717;
     width: 100%;
     height: 0%;
     -webkit-transition: all .75s cubic-bezier(.25, .74, .22, .99);
@@ -1191,10 +1191,9 @@ section:after {
     position: absolute;
     left: 50%;
     top: 60%;
-    width: 83%;
+    width: 86%;
     -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 
 .header-wrapper.menu-opened {
@@ -1247,7 +1246,7 @@ section:after {
 }
 
 .site-logo {
-    width: 80px;
+    width: 40px;
     display: block;
     overflow: hidden;
     -webkit-transform: translateY(100%);
@@ -1461,13 +1460,14 @@ section:after {
 }
 
 .site-navigation.fullscreen .menu.main-menu>li.menu-item {
-    font-size: 50px;
-    line-height: 80px;
-    font-weight: 700;
-    letter-spacing: 0em;
+    font-size: 61px;
+    line-height: 90px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
     display: block;
     overflow: hidden;
-    padding-bottom: 0
+    font-family: 'NeueHaasDisplay-me';
+    padding-bottom: 0;
 }
 
 .site-navigation.fullscreen .menu.main-menu>li.menu-item a {
@@ -1476,7 +1476,7 @@ section:after {
     -webkit-transform: translateY(100%);
     -ms-transform: translateY(100%);
     transform: translateY(100%);
-    color: rgba(25, 27, 29, .6);
+    color: rgba(255, 255, 255, 0.061);
     padding-right: 5px
 }
 
@@ -1486,11 +1486,20 @@ section:after {
     left: 0;
     width: 100%;
     overflow: hidden;
-    color: #191b1d;
+    color: #ffffff;
     -webkit-transition: width .75s cubic-bezier(.63, .03, .21, 1);
     -o-transition: width .75s cubic-bezier(.63, .03, .21, 1);
     transition: width .75s cubic-bezier(.63, .03, .21, 1);
     white-space: nowrap
+}
+
+.site-navigation.fullscreen .menu.main-menu>li.menu-item a:hover:before {
+    color: red;
+    background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 100% 200%;
+    -webkit-background-clip: text;
 }
 
 .site-navigation.fullscreen .menu.main-menu.hovered>li.menu-item a::before {
@@ -1501,13 +1510,6 @@ section:after {
     width: 100%
 }
 
-.site-navigation.fullscreen .menu.main-menu {
-    position: fixed;
-    left: 25%;
-    right: 0;
-    bottom: 15%;
-    padding: 0
-}
 
 .site-navigation.fullscreen ul.ulcol {
     -webkit-column-count: 2;
@@ -1518,32 +1520,29 @@ section:after {
 .sub-toggle {
     display: inline-block;
     position: relative;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     margin-left: 20px;
-    top: -5px;
-    -webkit-transition: -webkit-transform .6s ease;
-    transition: -webkit-transform .6s ease;
-    -o-transition: transform .6s ease;
-    transition: transform .6s ease;
-    transition: transform .6s ease, -webkit-transform .6s ease
+    top: -8px;
+    -webkit-transition: -webkit-transform 0.6s ease;
+    transition: -webkit-transform 0.6s ease;
+    transition: transform 0.6s ease;
+    transition: transform 0.6s ease, -webkit-transform 0.6s ease;
 }
 
 .sub-togg-line {
     position: absolute;
     width: 0%;
-    height: 1px;
-    background: #000;
+    height: 2.5px;
+    background: rgb(255, 255, 255);
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    -webkit-transition: width .4s ease, -webkit-transform .5s ease .4s;
-    transition: width .4s ease, -webkit-transform .5s ease .4s;
-    -o-transition: width .4s ease, transform .5s ease .4s;
-    transition: width .4s ease, transform .5s ease .4s;
-    transition: width .4s ease, transform .5s ease .4s, -webkit-transform .5s ease .4s
+    -webkit-transition: width 0.4s ease, -webkit-transform 0.5s ease 0.4s;
+    transition: width 0.4s ease, -webkit-transform 0.5s ease 0.4s;
+    transition: width 0.4s ease, transform 0.5s ease 0.4s;
+    transition: width 0.4s ease, transform 0.5s ease 0.4s, -webkit-transform 0.5s ease 0.4s;
 }
 
 .has-sub-in .sub-togg-line {
@@ -1562,19 +1561,7 @@ section:after {
     transform: rotate(180deg)
 }
 
-.sub-back {
-    cursor: pointer;
-    overflow: hidden;
-    display: block;
-    position: absolute;
-    opacity: 0;
-    left: 0;
-    visibility: hidden;
-    -webkit-transition: all .4s ease;
-    -o-transition: all .4s ease;
-    transition: all .4s ease;
-    font-size: 30px
-}
+
 
 .sub-back.is-active {
     opacity: .4;
@@ -1602,12 +1589,14 @@ section:after {
 
 .social-list li a {
     text-decoration: none;
-    color: rgba(25, 27, 29, .6);
+    color: rgba(255, 255, 255, 0.6);
     display: block;
     -webkit-transform-origin: 0 0;
     -ms-transform-origin: 0 0;
     transform-origin: 0 0;
     opacity: 0;
+    font-family: 'Ageo';
+    letter-spacing: 0.06em;
 }
 
 .social-list li {
@@ -1658,7 +1647,7 @@ section:after {
 
 .site-navigation.fullscreen ul ul {
     position: absolute;
-    top: 0;
+    top: 18px;
     left: 0;
     visibility: hidden;
     opacity: 0;
@@ -1667,11 +1656,12 @@ section:after {
 
 .site-navigation.fullscreen ul ul li {
     overflow: hidden;
-    font-size: 40px;
+    font-size: 35px;
     line-height: 70px;
-    letter-spacing: -.06em;
+    letter-spacing: 1px;
     padding: 0;
-    padding-right: 18px
+    padding-right: 18px;
+    font-family: 'Ageo';
 }
 
 .site-navigation.fullscreen ul ul li a {
@@ -1747,6 +1737,14 @@ body.loading span.toggle-line {
     transition: none !important
 }
 
+.menu-toggle.is-active .toggle-line {
+    background: #000000;
+}
+
+[data-humcolor="#fff"] .menu-toggle.is-active .toggle-line {
+    background: #000000;
+}
+
 .menu-toggle.is-active .toggle-line:nth-child(1) {
     -webkit-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
@@ -1790,7 +1788,7 @@ body.loading span.toggle-line {
 }
 
 .site-header.menu_dark .site-navigation.fullscreen .menu.main-menu>li.menu-item a {
-    color: hsla(0, 0%, 100%, .2)
+    color: rgba(255, 255, 255, 0.2)
 }
 
 .site-header.menu_dark .site-navigation.fullscreen .menu.main-menu>li.menu-item a::before {
@@ -1926,27 +1924,7 @@ ul.product-tags li a {
     display: block
 }
 
-.site-header {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 150px;
-    z-index: 9999
-}
 
-.site-header.fullscreen_menu::before {
-    content: "";
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: #f1f1f1;
-    width: 100%;
-    height: 0%;
-    -webkit-transition: all .75s cubic-bezier(.25, .74, .22, .99);
-    -o-transition: all .75s cubic-bezier(.25, .74, .22, .99);
-    transition: all .75s cubic-bezier(.25, .74, .22, .99)
-}
 
 .site-header.anim_start .site-header.fullscreen_menu::before {
     height: 100%
@@ -1979,15 +1957,6 @@ ul.product-tags li a {
     visibility: visible
 }
 
-.header-wrapper {
-    position: absolute;
-    left: 50%;
-    top: 60%;
-    width: 83%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%)
-}
 
 .header-wrapper.menu-opened {
     -webkit-transform: translateX(-50%);
@@ -2038,14 +2007,6 @@ ul.product-tags li a {
     opacity: 0
 }
 
-.site-logo {
-    width: 80px;
-    display: block;
-    overflow: hidden;
-    -webkit-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    transform: translateY(100%)
-}
 
 .site-logo img {
     width: 100%
@@ -2252,38 +2213,8 @@ ul.product-tags li a {
     display: none
 }
 
-.site-navigation.fullscreen .menu.main-menu>li.menu-item {
-    font-size: 50px;
-    line-height: 80px;
-    font-weight: 700;
-    letter-spacing: 0em;
-    display: block;
-    overflow: hidden;
-    padding-bottom: 0
-}
 
-.site-navigation.fullscreen .menu.main-menu>li.menu-item a {
-    position: relative;
-    display: inline-block;
-    -webkit-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    transform: translateY(100%);
-    color: rgba(25, 27, 29, .6);
-    padding-right: 5px
-}
 
-.site-navigation.fullscreen .menu.main-menu>li.menu-item a::before {
-    content: attr(data-hover);
-    position: absolute;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    color: #191b1d;
-    -webkit-transition: width .75s cubic-bezier(.63, .03, .21, 1);
-    -o-transition: width .75s cubic-bezier(.63, .03, .21, 1);
-    transition: width .75s cubic-bezier(.63, .03, .21, 1);
-    white-space: nowrap
-}
 
 .site-navigation.fullscreen .menu.main-menu.hovered>li.menu-item a::before {
     width: 0%
@@ -2295,10 +2226,10 @@ ul.product-tags li a {
 
 .site-navigation.fullscreen .menu.main-menu {
     position: fixed;
-    left: 25%;
+    left: 0%;
     right: 0;
-    bottom: 15%;
-    padding: 0
+    bottom: 14%;
+    padding: 0;
 }
 
 .site-navigation.fullscreen ul.ulcol {
@@ -2307,36 +2238,6 @@ ul.product-tags li a {
     column-count: 2
 }
 
-.sub-toggle {
-    display: inline-block;
-    position: relative;
-    width: 20px;
-    height: 20px;
-    margin-left: 20px;
-    top: -5px;
-    -webkit-transition: -webkit-transform .6s ease;
-    transition: -webkit-transform .6s ease;
-    -o-transition: transform .6s ease;
-    transition: transform .6s ease;
-    transition: transform .6s ease, -webkit-transform .6s ease
-}
-
-.sub-togg-line {
-    position: absolute;
-    width: 0%;
-    height: 1px;
-    background: #000;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    -webkit-transition: width .4s ease, -webkit-transform .5s ease .4s;
-    transition: width .4s ease, -webkit-transform .5s ease .4s;
-    -o-transition: width .4s ease, transform .5s ease .4s;
-    transition: width .4s ease, transform .5s ease .4s;
-    transition: width .4s ease, transform .5s ease .4s, -webkit-transform .5s ease .4s
-}
 
 .has-sub-in .sub-togg-line {
     width: 100%
@@ -2360,18 +2261,14 @@ ul.product-tags li a {
     display: block;
     position: absolute;
     opacity: 0;
-    left: 0;
+    left: -62px;
     visibility: hidden;
     -webkit-transition: all .4s ease;
     -o-transition: all .4s ease;
     transition: all .4s ease;
-    font-size: 30px
+    width: 30px
 }
 
-.sub-back.is-active {
-    opacity: .4;
-    visibility: visible
-}
 
 .site-header.menu_dark .sub-back {
     color: #fff
@@ -2427,29 +2324,7 @@ ul.product-tags li a {
     transform: translateY(-1px) translateX(0)
 }
 
-.site-navigation.fullscreen ul ul {
-    position: absolute;
-    top: 0;
-    left: 0;
-    visibility: hidden;
-    opacity: 0;
-    padding: 0
-}
 
-.site-navigation.fullscreen ul ul li {
-    overflow: hidden;
-    font-size: 40px;
-    line-height: 70px;
-    letter-spacing: -.06em;
-    padding: 0;
-    padding-right: 18px
-}
-
-.site-navigation.fullscreen ul ul li a {
-    -webkit-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    transform: translateY(100%)
-}
 
 .site-navigation.fullscreen ul.hidden>li,
 .site-navigation.fullscreen ul.hidden {
@@ -2560,9 +2435,7 @@ body.loading span.toggle-line {
     background: #191b1d
 }
 
-.site-header.menu_dark .site-navigation.fullscreen .menu.main-menu>li.menu-item a {
-    color: hsla(0, 0%, 100%, .2)
-}
+
 
 .site-header.menu_dark .site-navigation.fullscreen .menu.main-menu>li.menu-item a::before {
     color: #fff
