--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2296,6 +2296,7 @@
     font-size: 16px;
     letter-spacing: 1px;
     color: #ffffff;
+    overflow: hidden;
 
     a {
         color: #ffffff;
