--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -10944,6 +10944,7 @@ section.horizontal .animation-wrap.to-left {
   font-size: 54px;
   font-weight: 700;
   letter-spacing: 0;
+  color: #fff;
   line-height: 75px;
   padding-left: 5%;
   -webkit-box-sizing: border-box;
@@ -11030,7 +11031,7 @@ body.dark .cas-headline {
 }
 .cas-titles .cs-title a {
   text-decoration: none;
-  color: #191b1d;
+  color: #ffffff;
   display: block;
   overflow: hidden;
 }
@@ -11045,8 +11046,8 @@ body.dark .cas-headline {
   position: fixed;
   bottom: 7.5%;
   width: 50%;
-  height: 1px;
-  background: rgba(25, 27, 29, 0.2);
+  height: 2px;
+  background: rgba(255, 255, 255, 0.309);
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
@@ -11058,7 +11059,7 @@ body.dark .cas-progress {
 .cas-progress span {
   position: absolute;
   left: 0;
-  background: #191b1d;
+  background: #ffffff;
   height: 100%;
   width: 0%;
 }
@@ -11775,6 +11776,8 @@ section:after {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: 100% 200%;
+  -webkit-animation: gradient 4s ease infinite;
+          animation: gradient 4s ease infinite;
   -webkit-background-clip: text;
 }
 .site-navigation.fullscreen .menu.main-menu.hovered > li.menu-item a::before {
@@ -11965,7 +11968,7 @@ body.loading span.toggle-line {
   transition: none !important;
 }
 .menu-toggle.is-active .toggle-line {
-  background: #000000;
+  background: #fff !important;
 }
 [data-humcolor="#fff"] .menu-toggle.is-active .toggle-line {
   background: #000000;
