--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -473,6 +473,7 @@
     font-size: 54px;
     font-weight: 700;
     letter-spacing: 0;
+    color: #fff;
     line-height: 75px;
     padding-left: 5%;
     -webkit-box-sizing: border-box;
@@ -574,7 +575,7 @@ body.dark .cas-headline {
 
 .cas-titles .cs-title a {
     text-decoration: none;
-    color: #191b1d;
+    color: #ffffff;
     display: block;
     overflow: hidden;
 }
@@ -591,11 +592,10 @@ body.dark .cas-headline {
     position: fixed;
     bottom: 7.5%;
     width: 50%;
-    height: 1px;
-    background: rgba(25, 27, 29, .2);
+    height: 2px;
+    background: rgba(255, 255, 255, 0.309);
     left: 50%;
     -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
 }
 
@@ -607,7 +607,7 @@ body.dark .cas-progress {
 .cas-progress span {
     position: absolute;
     left: 0;
-    background: #191b1d;
+    background: #ffffff;
     height: 100%;
     width: 0%;
 }
@@ -1499,6 +1499,7 @@ section:after {
     background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 100% 200%;
+    animation: gradient 4s ease infinite;
     -webkit-background-clip: text;
 }
 
@@ -1738,7 +1739,7 @@ body.loading span.toggle-line {
 }
 
 .menu-toggle.is-active .toggle-line {
-    background: #000000;
+    background: #fff !important;
 }
 
 [data-humcolor="#fff"] .menu-toggle.is-active .toggle-line {
