--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -737,7 +737,7 @@ body.dark .cas-progress span {
 }
 
 ////lo
-.alioth-page-loader {
+.en-page-loader {
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -746,7 +746,7 @@ body.dark .cas-progress span {
     z-index: 888
 }
 
-.alioth-page-loader .apl-wrapper {
+.en-page-loader .apl-wrapper {
     position: fixed;
     bottom: 10%;
     left: 8.5%;
@@ -765,7 +765,7 @@ span.apl-background {
     z-index: -15
 }
 
-.alioth-page-loader.light span.apl-background {
+.en-page-loader.light span.apl-background {
     background: #ebebeb
 }
 
@@ -821,7 +821,7 @@ span.apl-background {
 }
 
 
-// .alioth-page-loader.light .apl-count {
+// .en-page-loader.light .apl-count {
 //     color: rgba(25, 27, 29, .05)
 // }
 
@@ -874,11 +874,11 @@ span.apl-background {
 
 }
 
-.alioth-page-loader.dark .apl-text {
+.en-page-loader.dark .apl-text {
     color: #fff
 }
 
-// .alioth-page-loader.dark .apl-count {
+// .en-page-loader.dark .apl-count {
 //     color: hsla(0, 0%, 100%, .05)
 // }
 
