--- a/assets/resources/styles/less/layout/_global.less
+++ b/assets/resources/styles/less/layout/_global.less
@@ -521,6 +521,7 @@ template {
   left: -24px;
   display: block;
   width: 48px;
+  mix-blend-mode: exclusion;
   height: 48px;
   -webkit-transform: scale(0);
   -moz-transform: scale(0);
