--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -1139,7 +1139,7 @@ section:after {
     position: absolute;
     width: 100%;
     height: 80px;
-    z-index: 9999;
+    z-index: 1;
 }
 
 .site-header.fullscreen_menu::before {
@@ -1217,13 +1217,6 @@ section:after {
     top: 45%
 }
 
-.site-branding,
-.menu-toggle,
-.header-widgets {
-    display: block;
-    z-index: 999;
-    position: absolute
-}
 
 .site-branding {
     left: 0;
@@ -1249,8 +1242,6 @@ section:after {
     width: 40px;
     display: block;
     overflow: hidden;
-    -webkit-transform: translateY(100%);
-    -ms-transform: translateY(100%);
     transform: translateY(100%)
 }
 
@@ -1714,7 +1705,7 @@ section:after {
     width: 0;
     height: 1px;
     display: block;
-    background: #ffffff;
+    // background: #ffffff;
     -webkit-transition: all .3s cubic-bezier(.475, .425, 0, .995);
     -o-transition: all .3s cubic-bezier(.475, .425, 0, .995);
     transition: all .3s cubic-bezier(.475, .425, 0, .995);
@@ -1984,7 +1975,7 @@ ul.product-tags li a {
 .menu-toggle,
 .header-widgets {
     display: block;
-    z-index: 999;
+    z-index: 0;
     position: absolute
 }
 
@@ -2364,17 +2355,6 @@ ul.product-tags li a {
 
 .menu-toggle.hidden {
     display: none
-}
-
-.toggle-line {
-    width: 0;
-    height: 1px;
-    display: block;
-    background: #ffffff;
-    -webkit-transition: all .3s cubic-bezier(.475, .425, 0, .995);
-    -o-transition: all .3s cubic-bezier(.475, .425, 0, .995);
-    transition: all .3s cubic-bezier(.475, .425, 0, .995);
-    left: 0
 }
 
 span.toggle-line:nth-child(2) {
