--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -771,7 +771,7 @@ span.apl-background {
 
 .apl-count {
     position: fixed;
-    bottom: 0;
+    bottom: -91px;
     left: -4%
 }
 
@@ -829,7 +829,7 @@ span.apl-background {
     display: block;
     overflow: hidden;
     float: left;
-    height: 400px;
+    height: 323px;
     margin-left: -15px;
 
 }
@@ -1073,6 +1073,11 @@ section:after {
 }
 
 @media only screen and (max-width: 450px) {
+    .alioth-page-loader {
+        width: 100%;
+        height: 100%;
+    }
+
     .cas-headline {
         font-size: 30px;
         line-height: 45px;
@@ -2582,6 +2587,29 @@ ul.product-tags li a {
         padding: 0 0 0px;
         transform: none !important;
         margin-top: 40%;
+    }
+
+    .alioth-page-loader {
+        width: 100%;
+        height: 100%;
+    }
+
+    .alioth-page-loader {
+        width: 100%;
+        height: 100%;
+    }
+
+    .apl-count {
+        font-size: 133px;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+        width: 100%;
+    }
+
+    .apl-count .apl-num {
+        height: 203px;
     }
 
     #work-sction .pr-list .pr-thum .teg {
