--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3759,6 +3759,24 @@
         }
     }
 
+    .alioth-page-loader {
+        width: 100%;
+        height: 100%;
+    }
+
+    .apl-count {
+        font-size: 133px;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+        transform: translateX(-50%);
+        width: 100%;
+    }
+
+    .apl-count .apl-num {
+        height: 203px;
+    }
+
     .client-section .grid-logo .logo-item {
         width: 50%;
         padding: 15px;
