--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -7948,6 +7948,20 @@ header {
     width: 30%;
     margin-bottom: 10px;
   }
+  .alioth-page-loader {
+    width: 100%;
+    height: 100%;
+  }
+  .apl-count {
+    font-size: 133px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: 100%;
+  }
+  .apl-count .apl-num {
+    height: 203px;
+  }
   .client-section .grid-logo .logo-item {
     width: 50%;
     padding: 15px;
@@ -12635,10 +12649,6 @@ ul.product-tags li a {
     -webkit-transform: none !important;
             transform: none !important;
     margin-top: 40%;
-  }
-  .alioth-page-loader {
-    width: 100%;
-    height: 100%;
   }
   .alioth-page-loader {
     width: 100%;
