--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -2628,6 +2628,73 @@ ul.product-tags li a {
         overflow: hidden;
     }
 
+    .menu-toggle {
+        left: unset;
+        right: 0;
+    }
+
+    .site-navigation.fullscreen {
+        height: 100%;
+    }
+
+    .site-navigation.fullscreen .fs-menu-wrapper {
+        height: 100%;
+    }
+
+    .site-navigation.fullscreen .menu.main-menu {
+        left: 0;
+        bottom: unset;
+        top: 15%;
+        -webkit-transform: none;
+        -ms-transform: none;
+        transform: none;
+    }
+
+    .site-navigation.fullscreen .menu.main-menu {
+        left: 0;
+        bottom: unset;
+        top: 15%;
+        -webkit-transform: none;
+        -ms-transform: none;
+        transform: none;
+    }
+
+    .site-navigation.fullscreen .menu.main-menu>li.menu-item {
+        font-size: 35px;
+        line-height: 60px;
+    }
+
+    .site-navigation.fullscreen ul.ulcol {
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+    }
+
+    .site-navigation.fullscreen ul ul li {
+        font-size: 25px;
+        line-height: 40px;
+    }
+
+    .menu-widget-right,
+    .menu-widget-left {
+        bottom: 0;
+        left: 0;
+
+    }
+
+    .social-list li {
+        display: inline-block;
+        font-size: 15px;
+        line-height: 20px;
+        display: block;
+    }
+
+    .sub-back.is-active {
+        left: unset;
+        right: 0;
+        top: 15%;
+    }
+
     .section-w {
         display: none;
     }
