--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -7962,6 +7962,62 @@ header {
   .apl-count .apl-num {
     height: 203px;
   }
+  .site-header {
+    height: 100px;
+  }
+  .sub-back.is-active {
+    left: unset;
+    right: 0;
+    top: 15%;
+  }
+  .menu-toggle {
+    left: unset;
+    right: 0;
+  }
+  .site-navigation.fullscreen {
+    height: 100%;
+  }
+  .site-navigation.fullscreen .fs-menu-wrapper {
+    height: 100%;
+  }
+  .site-navigation.fullscreen .menu.main-menu {
+    left: 0;
+    bottom: unset;
+    top: 15%;
+    -webkit-transform: none;
+    transform: none;
+  }
+  .site-navigation.fullscreen .menu.main-menu {
+    left: 0;
+    bottom: unset;
+    top: 15%;
+    -webkit-transform: none;
+    transform: none;
+  }
+  .site-navigation.fullscreen .menu.main-menu > li.menu-item {
+    font-size: 35px;
+    line-height: 60px;
+  }
+  .site-navigation.fullscreen ul.ulcol {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
+  .site-navigation.fullscreen ul ul li {
+    font-size: 25px;
+    line-height: 40px;
+  }
+  .menu-widget-right,
+  .menu-widget-left {
+    bottom: 0;
+    left: 0;
+  }
+  .social-list li {
+    display: inline-block;
+    font-size: 15px;
+    line-height: 20px;
+    display: block;
+  }
   .client-section .grid-logo .logo-item {
     width: 50%;
     padding: 15px;
@@ -12679,6 +12735,59 @@ ul.product-tags li a {
     bottom: 20px;
     right: 17px;
     overflow: hidden;
+  }
+  .menu-toggle {
+    left: unset;
+    right: 0;
+  }
+  .site-navigation.fullscreen {
+    height: 100%;
+  }
+  .site-navigation.fullscreen .fs-menu-wrapper {
+    height: 100%;
+  }
+  .site-navigation.fullscreen .menu.main-menu {
+    left: 0;
+    bottom: unset;
+    top: 15%;
+    -webkit-transform: none;
+    transform: none;
+  }
+  .site-navigation.fullscreen .menu.main-menu {
+    left: 0;
+    bottom: unset;
+    top: 15%;
+    -webkit-transform: none;
+    transform: none;
+  }
+  .site-navigation.fullscreen .menu.main-menu > li.menu-item {
+    font-size: 35px;
+    line-height: 60px;
+  }
+  .site-navigation.fullscreen ul.ulcol {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
+  .site-navigation.fullscreen ul ul li {
+    font-size: 25px;
+    line-height: 40px;
+  }
+  .menu-widget-right,
+  .menu-widget-left {
+    bottom: 0;
+    left: 0;
+  }
+  .social-list li {
+    display: inline-block;
+    font-size: 15px;
+    line-height: 20px;
+    display: block;
+  }
+  .sub-back.is-active {
+    left: unset;
+    right: 0;
+    top: 15%;
   }
   .section-w {
     display: none;
