--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1563,7 +1563,7 @@ section.horizontal .animation-wrap.to-left {
       text-transform: inherit;
       text-indent: inherit;
       text-decoration: none;
-      
+
 
       span {
         background-image: linear-gradient(45deg, dodgerblue, purple, red, dodgerblue);
@@ -1575,11 +1575,12 @@ section.horizontal .animation-wrap.to-left {
         animation: gradient 2s ease infinite;
         -webkit-animation-direction: alternate;
         animation-direction: alternate;
+
         .arro {
           img {
             width: 13px;
             margin-left: 7px;
-  
+
           }
         }
       }
@@ -1595,6 +1596,7 @@ section.horizontal .animation-wrap.to-left {
       animation-direction: alternate;
     }
   }
+
   .en-btn_send:hover {
     .arro {
       img {
@@ -1951,6 +1953,16 @@ section.horizontal .animation-wrap.to-left {
     margin-bottom: 60px;
     overflow: hidden;
   }
+
+  .services-s {
+    padding: 0px 0%;
+
+    .p-right {
+      padding-right: 0%;
+    }
+  }
+
+
 
   .services-s .p-left {
     padding-left: 0%;
