--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -743,7 +743,7 @@ body.dark .cas-progress span {
     height: 100vh;
     top: 0;
     left: 0;
-    z-index: 1
+    z-index: 888
 }
 
 .en-page-loader .apl-wrapper {
@@ -1073,7 +1073,7 @@ section:after {
 }
 
 @media only screen and (max-width: 450px) {
-    .alioth-page-loader {
+    .en-page-loader {
         width: 100%;
         height: 100%;
     }
@@ -2582,6 +2582,15 @@ ul.product-tags li a {
         padding: 10px 0px 80px 0px;
     }
 
+    .site-navigation.fullscreen {
+        position: fixed;
+        width: 100%;
+        height: 85%;
+        top: 0;
+        left: 0;
+        z-index: 0;
+    }
+
     #work-sction .pr-list .pr-main {
         width: 100%;
         padding: 0 0 0px;
@@ -2591,7 +2600,7 @@ ul.product-tags li a {
 
 
 
-    .alioth-page-loader {
+    .en-page-loader {
         width: 100%;
         height: 100%;
     }
