--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -980,7 +980,8 @@
 .mob {
     display: none;
 }
-@media screen and (max-width:1440px){
+
+@media screen and (max-width:1440px) {
     .lets .flex-row P {
         text-align: right;
         font-size: 2em;
@@ -988,9 +989,10 @@
         padding-left: 45%;
         letter-spacing: 2px;
     }
-    
-    
+
+
 }
+
 @media screen and (max-width:767px) {
     .mob {
         display: none;
@@ -1687,7 +1689,7 @@ body.dark .ar-work-title,
 
 body.dark .ar-work-cat,
 .a-recent-works.dark .ar-work-cat {
-    color: rgb(255 255 255 / 20%);
+    color: rgba(255, 255, 255, 0.416);
 }
 
 
@@ -1739,8 +1741,7 @@ body.dark .ar-work-cat,
     font-size: 25px;
 }
 
-.a-recent-works.dark .recent-works-bg-text,
-.a-recent-works.dark .ar-work-cat {
+.a-recent-works.dark .recent-works-bg-text {
     color: hsla(0, 0%, 100%, .2);
 }
 
