--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -1205,7 +1205,7 @@ section:after {
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-    height: 84vh
+    height: 80vh
 }
 
 .site-header.header_sticked {
@@ -1456,14 +1456,14 @@ section:after {
 }
 
 .site-navigation.fullscreen .menu.main-menu>li.menu-item {
-    font-size: 61px;
-    line-height: 90px;
-    text-transform: uppercase;
-    letter-spacing: 3px;
+    font-size: 64px;
+    line-height: 80px;
+    // text-transform: uppercase;
+    letter-spacing: 2px;
     display: block;
     overflow: hidden;
-    font-family: 'NeueHaasDisplay-me';
-    padding-bottom: 0;
+    font-family: 'Ageo-Semibold';
+    padding-bottom: 0.3vw;
 }
 
 .site-navigation.fullscreen .menu.main-menu>li.menu-item a {
@@ -1598,7 +1598,7 @@ section:after {
 
 .social-list li {
     font-size: 18px;
-    line-height: 32px;
+    line-height: 22px;
     padding: 0;
     margin-bottom: 10px;
 }
@@ -1687,14 +1687,10 @@ section:after {
     display: none
 }
 
-.menu-widget-left {
-    left: 0;
-    bottom: 17%
-}
 
 .menu-widget-right {
-    right: 0;
-    bottom: 8%
+    right: 12%;
+    bottom: 24%
 }
 
 .menu-toggle {
@@ -1955,12 +1951,6 @@ ul.product-tags li a {
 }
 
 
-.header-wrapper.menu-opened {
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    height: 84vh
-}
 
 .site-header.header_sticked {
     position: fixed;
@@ -2223,9 +2213,9 @@ ul.product-tags li a {
 
 .site-navigation.fullscreen .menu.main-menu {
     position: fixed;
-    left: 0%;
+    left: 8%;
     right: 0;
-    bottom: 14%;
+    bottom: 24%;
     padding: 0;
 }
 
@@ -2343,15 +2333,9 @@ ul.product-tags li a {
     display: none
 }
 
-.menu-widget-left {
-    left: 0;
-    bottom: 17%
-}
 
-.menu-widget-right {
-    right: 0;
-    bottom: 8%
-}
+
+
 
 .menu-toggle {
     height: 25px;
@@ -2659,15 +2643,6 @@ ul.product-tags li a {
         transform: none;
     }
 
-    .site-navigation.fullscreen .menu.main-menu {
-        left: 0;
-        bottom: unset;
-        top: 15%;
-        -webkit-transform: none;
-        -ms-transform: none;
-        transform: none;
-    }
-
     .site-navigation.fullscreen .menu.main-menu>li.menu-item {
         font-size: 35px;
         line-height: 60px;
@@ -2691,12 +2666,7 @@ ul.product-tags li a {
 
     }
 
-    .social-list li {
-        display: inline-block;
-        font-size: 15px;
-        line-height: 20px;
-        display: block;
-    }
+
 
     .sub-back.is-active {
         left: unset;
