--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -2177,6 +2177,106 @@ header {
     margin-bottom: 1.5vh;
   }
 }
+.nav__showreel {
+  position: absolute;
+  bottom: 6.166667vw;
+  left: 0.166667vw;
+  color: #fff;
+  z-index: 999;
+}
+.buttons .button a,
+.buttons .button button {
+  pointer-events: all;
+  padding: 10px 0;
+  margin: 0;
+  background: transparent;
+  border: none;
+  font-weight: 700;
+  font-family: Apercu;
+  cursor: pointer;
+  outline: none;
+  border-radius: 0;
+  text-align: center;
+  color: #fff;
+  font-family: 'Ageo';
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
+}
+.nav__showreel .buttons .button a .texts {
+  color: #fff;
+}
+.nav__showreel .buttons .button a {
+  padding: 0 0 10px;
+  display: block;
+  font-size: 1em;
+  letter-spacing: -0.00555556em;
+  font-weight: 400;
+}
+.buttons .button a .texts,
+.buttons .button button .texts {
+  display: block;
+  color: #fff;
+}
+.buttons .button a .line,
+.buttons .button button .line {
+  position: absolute;
+  left: 0;
+  bottom: 0px;
+  height: 2px;
+  width: 20px;
+  background: #fff;
+}
+.nav__newsletter-talk {
+  position: absolute;
+  bottom: 6.166667vw;
+  right: 0;
+  display: -webkit-box;
+  font-family: 'Ageo';
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  z-index: 999;
+}
+.nav__newsletter-talk > div {
+  margin-left: 87px;
+}
+.txt--p6 {
+  font-size: 1em;
+  line-height: 1.6875em;
+  letter-spacing: -0.005625em;
+  font-weight: 400;
+  font-family: 'Ageo';
+}
+.nav__showreel > div .txt--p6 {
+  color: #ffffff;
+  margin-bottom: 1px;
+  font-size: 1em;
+  font-weight: 400;
+  letter-spacing: -0.01694444em;
+}
+.nav__newsletter-talk > div .txt--p6 {
+  color: #ffffff;
+  margin-bottom: 1px;
+  font-size: 1em;
+  font-weight: 400;
+  letter-spacing: -0.01694444em;
+}
+.nav__newsletter-talk > div .buttons .button a .texts {
+  color: #fff;
+}
+.nav__newsletter-talk > div .buttons .button a {
+  padding: 0 0 10px;
+  display: block;
+  font-size: 1em;
+  letter-spacing: -0.00555556em;
+  font-weight: 400;
+}
+.git-button {
+  opacity: 0;
+}
 .Menu-subnavArrow {
   width: 1.3rem;
   height: 1.4rem;
@@ -11615,7 +11715,7 @@ section:after {
 .header-wrapper.menu-opened {
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
-  height: 84vh;
+  height: 80vh;
 }
 .site-header.header_sticked {
   position: fixed;
@@ -11816,14 +11916,13 @@ section:after {
   display: none;
 }
 .site-navigation.fullscreen .menu.main-menu > li.menu-item {
-  font-size: 61px;
-  line-height: 90px;
-  text-transform: uppercase;
-  letter-spacing: 3px;
+  font-size: 64px;
+  line-height: 80px;
+  letter-spacing: 2px;
   display: block;
   overflow: hidden;
-  font-family: 'NeueHaasDisplay-me';
-  padding-bottom: 0;
+  font-family: 'Ageo-Semibold';
+  padding-bottom: 0.3vw;
 }
 .site-navigation.fullscreen .menu.main-menu > li.menu-item a {
   position: relative;
@@ -11933,7 +12032,7 @@ section:after {
 }
 .social-list li {
   font-size: 18px;
-  line-height: 32px;
+  line-height: 22px;
   padding: 0;
   margin-bottom: 10px;
 }
@@ -12005,13 +12104,9 @@ section:after {
 .site-navigation.classic .menu-widget {
   display: none;
 }
-.menu-widget-left {
-  left: 0;
-  bottom: 17%;
-}
 .menu-widget-right {
-  right: 0;
-  bottom: 8%;
+  right: 12%;
+  bottom: 24%;
 }
 .menu-toggle {
   height: 25px;
@@ -12215,11 +12310,6 @@ ul.product-tags li a {
 .site-header.fullscreen_menu.menu-has-open::after {
   opacity: 1;
   visibility: visible;
-}
-.header-wrapper.menu-opened {
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  height: 84vh;
 }
 .site-header.header_sticked {
   position: fixed;
@@ -12427,9 +12517,9 @@ ul.product-tags li a {
 }
 .site-navigation.fullscreen .menu.main-menu {
   position: fixed;
-  left: 0%;
+  left: 8%;
   right: 0;
-  bottom: 14%;
+  bottom: 24%;
   padding: 0;
 }
 .site-navigation.fullscreen ul.ulcol {
@@ -12518,14 +12608,6 @@ ul.product-tags li a {
 }
 .site-navigation.classic .menu-widget {
   display: none;
-}
-.menu-widget-left {
-  left: 0;
-  bottom: 17%;
-}
-.menu-widget-right {
-  right: 0;
-  bottom: 8%;
 }
 .menu-toggle {
   height: 25px;
@@ -12767,13 +12849,6 @@ ul.product-tags li a {
     -webkit-transform: none;
     transform: none;
   }
-  .site-navigation.fullscreen .menu.main-menu {
-    left: 0;
-    bottom: unset;
-    top: 15%;
-    -webkit-transform: none;
-    transform: none;
-  }
   .site-navigation.fullscreen .menu.main-menu > li.menu-item {
     font-size: 35px;
     line-height: 60px;
@@ -12791,12 +12866,6 @@ ul.product-tags li a {
   .menu-widget-left {
     bottom: 0;
     left: 0;
-  }
-  .social-list li {
-    display: inline-block;
-    font-size: 15px;
-    line-height: 20px;
-    display: block;
   }
   .sub-back.is-active {
     left: unset;
@@ -16810,7 +16879,7 @@ body.dark .ar-work-title,
 }
 body.dark .ar-work-cat,
 .a-recent-works.dark .ar-work-cat {
-  color: #ffff0d;
+  color: rgba(255, 255, 255, 0.416);
 }
 .recent-works-bg-text {
   position: absolute;
@@ -16851,8 +16920,7 @@ body.dark .ar-work-cat,
 .a-recent-works-nav div i {
   font-size: 25px;
 }
-.a-recent-works.dark .recent-works-bg-text,
-.a-recent-works.dark .ar-work-cat {
+.a-recent-works.dark .recent-works-bg-text {
   color: hsla(0, 0%, 100%, 0.2);
 }
 .a-recent-works.dark .a-recent-works-nav div,
