--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -530,6 +530,127 @@ header {
 	}
 }
 
+
+
+// sss
+.nav__showreel {
+	position: absolute;
+	bottom: 6.166667vw;
+	left: 0.166667vw;
+	color: #fff;
+	z-index: 999;
+}
+
+.buttons .button a,
+.buttons .button button {
+	pointer-events: all;
+	padding: 10px 0;
+	margin: 0;
+	background: transparent;
+	border: none;
+	font-weight: 700;
+	font-family: Apercu;
+	cursor: pointer;
+	outline: none;
+	border-radius: 0;
+	text-align: center;
+	color: #fff;
+	font-family: 'Ageo';
+	text-decoration: none;
+	position: relative;
+	display: inline-block;
+}
+
+.nav__showreel .buttons .button a .texts {
+	color: #fff;
+}
+
+.nav__showreel .buttons .button a {
+	padding: 0 0 10px;
+	display: block;
+	font-size: 1em;
+	letter-spacing: -.00555556em;
+	font-weight: 400;
+}
+
+.buttons .button a .texts,
+.buttons .button button .texts {
+	display: block;
+	color: #fff;
+}
+
+.buttons .button a .line,
+.buttons .button button .line {
+	position: absolute;
+	left: 0;
+	bottom: 0px;
+	height: 2px;
+	width: 20px;
+	background: #fff;
+}
+
+.nav__newsletter-talk {
+	position: absolute;
+	bottom: 6.166667vw;
+	right: 0;
+	display: -webkit-box;
+	font-family: 'Ageo';
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	z-index: 999;
+}
+
+.nav__newsletter-talk>div {
+	margin-left: 87px;
+}
+
+.txt--p6 {
+	font-size: 1em;
+	line-height: 1.6875em;
+	letter-spacing: -.005625em;
+	font-weight: 400;
+	font-family: 'Ageo';
+}
+
+.nav__showreel>div .txt--p6 {
+	color: #ffffff;
+	margin-bottom: 1px;
+	font-size: 1em;
+	font-weight: 400;
+	letter-spacing: -.01694444em;
+}
+
+.nav__newsletter-talk>div .txt--p6 {
+	color: #ffffff;
+	margin-bottom: 1px;
+	font-size: 1em;
+	font-weight: 400;
+	letter-spacing: -.01694444em;
+}
+
+.nav__newsletter-talk>div .buttons .button a .texts {
+	color: #fff;
+}
+
+.nav__newsletter-talk>div .buttons .button a {
+	padding: 0 0 10px;
+	display: block;
+	font-size: 1em;
+	letter-spacing: -.00555556em;
+	font-weight: 400;
+}
+
+.git-button {
+	opacity: 0;
+}
+
+// 
+
+
+
 .Menu-subnavArrow {
 	width: 1.3rem;
 	height: 1.4rem;
