--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1671,6 +1671,7 @@
     margin-top: -50px;
     font-family: 'NeueHaasDisplay-me';
     position: absolute;
+    text-transform: uppercase;
 }
 
 body.dark .ar-work-title,
