--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -1596,6 +1596,10 @@ section:after {
     letter-spacing: 0.06em;
 }
 
+.social-list li a:hover {
+    color: #fff;
+}
+
 .social-list li {
     font-size: 18px;
     line-height: 22px;
